--- a/qbec/BUILD
+++ b/qbec/BUILD
@@ -1,3 +1,5 @@
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+
 package(default_visibility = ["//visibility:public"])
 
 exports_files(["qbec.bzl"])
@@ -13,4 +15,13 @@ alias(
         "@bazel_tools//src/conditions:linux_x86_64": "@qbec_linux//:qbec",
         "@bazel_tools//src/conditions:darwin": "@qbec_osx//:qbec",
     }),
+)
+
+bzl_library(
+    name = "qbec_lib",
+    srcs = ["qbec.bzl"],
+    deps = [
+        "@bazel_skylib//lib:shell.bzl",
+        "@bazel_skylib//lib:paths.bzl",
+    ],
 )
